--- a/main_mobile.css
+++ b/main_mobile.css
@@ -54,7 +54,14 @@
 				border-bottom: solid 2px #A31929;
 				border-top: solid 2px #A31929;
             }
-            
+            #rules
+		{
+			border: solid thin black;
+			width: 80%;
+			height: 1000px;
+			margin: .5% auto .7% auto;
+			overflow: scroll;
+		}
             #headline {
                 margin: 10px 0 0 2%;
                 color: white;
@@ -71,11 +78,16 @@
 			#headline h3 {
 				margin: -7px 0 0 0;
 				width: 70%;
+				font-size: 150%;
 			}
 			
             h4 {
                 margin-bottom: 5px;
             }
+			
+			#top{
+				margin: 0 auto;
+			}
 			
 			p {
 			margin-left: 10px;
@@ -89,7 +101,6 @@
                 text-align: center;
 				width: 100%;
 				margin: 0 auto;
-				margin-top: -15px;
 				padding-top: 20px;
 						font-weight: bold;
 						text-transform: uppercase;
@@ -97,36 +108,40 @@
 				background-color: #A31929;
             }
             
+			
+			
             ul {
                 padding: 0;
             }
             nav ul li {
 				margin: 0 auto;
+				margin-top: 2%;
 				font-size: 25pt;
-				width: 80%;
 				height: 50px;
+				text-align:center;
 				list-style: none;
             }
             nav ul li a:link {
                 text-decoration: none;
-                padding: 0px;
+                
+				width:100%;
                 color: white;
+				padding-right:30%;
+				padding-left:30%;
+				padding-top:2%;
+				margin-top:2%;
+				padding-bottom:2%;
+				margin-bottom:2%;
             }
-    
-            nav ul li a:link {
-                text-decoration: none;
-            }
-            nav ul a:visited {
+			ul a:visited {
                 color: white;
             }
             nav ul li a:hover {
                 text-decoration: none;
                 background: #771929;
-        
             }
             nav a {
-				
-                width: 100%;
+				width:50%;
             } 
             
             /*Naviation css ends here */
