--- a/main.css
+++ b/main.css
@@ -124,7 +124,7 @@
     /*LOGIN CSS STARTS HERE */
     #login {
 	width: 1002px;
-	height: 50px;
+	height: 55px;
 	background-color: #A31929;
     }
     .loginText {
@@ -165,17 +165,13 @@
 	transition-duration:0.5s;
 	box-shadow: inset 0px 0px 1px rgba(0,0,0,0.4);
     }
-    
-    button
-    {
-	width:100px;
-	height:20px;
-	text-transform:uppercase;
-    }
-    button:active
-    {
-	position:relative;
-	top:1px;
+    .login-button {
+   
+      background-color: #771929;
+      font-weight: bold;
+      color: white;
+      height: 25px;
+      width: 100px;
     }
     #loggedin
     {
