--- a/mobile/style.css
+++ b/mobile/style.css
@@ -161,7 +161,7 @@
     #rules {
         border: solid thin black;
         width: 95%;
-        margin: 0 auto;
+        margin: 0 auto 20px auto;
     }
     /* CONTENT STYLES */
     .mainpara 
@@ -172,7 +172,7 @@
     .space {
         height: 400px;
         width: 100%;
-        background-color: white;
+        background-color: black;
     }
     .login-button-index {
       background-color: #771929;
@@ -186,5 +186,33 @@
         width: 100%;
         height: 40px;
         font-size: 1.3em;
+    }
+    #headline {
+	margin: 10px 0 20px 18px;
+	color: white;
+	background-color: #A31929;
+	width: 90%;
+	height: 30px;
+	padding: 20px 0 0 10px;
+	border-left: solid 10px black;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+	font-size: 1.2em;
+    }
+    #headline h3 {
+	margin: -7px 0 0 0;
+    }
+    footer {
+	width: 100%;
+	border-top: solid thin black;
+	margin: 0 auto;
+	clear: both;
+	background-color: white;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+    }
+    #footer {
+	text-align: center;
+	margin: 5px auto;
     }
 }
