--- a/mobile/style.css
+++ b/mobile/style.css
@@ -1,4 +1,4 @@
-  #wrapper {
+#wrapper {
     display: none !important;
   }
   .mobile-view {
@@ -112,7 +112,7 @@
 	color: White;
     }
     #loginfields {
-        width: 20-0px;
+        width: 300px;
         margin-left: -100px;
         font-size: 1.5em;
     }
